# BioFoundation

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_train.py
ARES/: NOTICE  README.md  requirements.txt
ARES/ares/: __init__.py
ARES/atomic_ops/: README.md  __init__.py  add.py  alternating_attention.py  avgpool.py  classification_head.py  concat.py  constants.py  conv1d_depthwise.py  conv2d.py  cross_attention.py  cross_attention_self_refine.py  embedding.py  flatten.py  flip.py  gelu.py  globalavgpool.py  groupnorm.py  kv_cache.py  layernorm.py  linear.py  llama_block.py  maxpool.py  mhsa.py  quantize.py  relu.py  requantize.py  rfft.py  rmsnorm.py  rope.py  run_all_tests.py  silu.py  softmax.py  softplus.py  ssm.py  swiglu.py  tanh.py  test_edge_cases.py  test_i_softmax.py  transpose.py
ARES/codegen/: README.md  constants.py  gap9_model.py  generate_c_code.py  ne16_packing.py  siracusa_model.py
ARES/docs/: ADDING_OPERATIONS.md  ARCHITECTURE.md  DEBUGGING.md  GETTING_STARTED.md  (+5 more)
config/: README.md  defaults.yaml
criterion/: README.md  pretrain_criterion.py  query_specialization_criterion.py
data_module/: README.md  cross_validation_data_module.py  finetune_data_module.py  multiloader_data_module.py  pretrain_data_module.py  subject_independent_data_module.py
datasets/: README.md  emg_finetune_dataset.py  emg_pretrain_dataset.py  hdf5_dataset.py  seed_v_dataset.py  siena_dataset.py  tueg_dataset.py  tuh_dataset.py
docs/: README.md
make_datasets/: README.md  make_hdf5.py  make_tueg_bipolar.py  process_raw_eeg.py
models/: EMG.py  FEMBA.py  LUNA.py  README.md  TinyMyo.py  tcn_baseline.py
schedulers/: README.md  cosine.py  multi_step_lr.py
scripts/: README.md  db5.py  db6.py  db7.py  db8.py  emg2pose.py  epn.py  uci.py
tasks/: README.md  finetune_task.py  finetune_task_EMG.py  finetune_task_LUNA.py  pretrain_task.py  pretrain_task_EMG.py  pretrain_task_LUNA.py
util/: ckpt_to_safetensor.py  train_utils.py
(+261 files in other folders)
